update book content according to recent changes